# KataPractice

./: .gitignore  CMakeLists.txt
Burrows-Wheeler-Transformation/: Burrows-Wheeler-Transformation.cpp  Burrows-Wheeler-Transformation.hpp  CMakeLists.txt
SubarrayWithGivenSum/: CMakeLists.txt  SubarrayWithGivenSumSrc.hpp  SubarrayWithGivenSumTst.cpp
